--- a/mobile.css
+++ b/mobile.css
@@ -1,5 +1,5 @@
 body{
-    background-attachment: scroll;
+    background-attachment: fixed;
 }
 
 .contenedor{
@@ -17,7 +17,7 @@ body{
 }
 section{
     font-size: calc(.5rem + .5vw);
-    line-height: .1rem;
+    line-height: 1rem;
     padding: .1rem;
     margin: .1rem;
 }
